--- a/src/style.scss
+++ b/src/style.scss
@@ -1,12 +1,10 @@
 /**
- * The following styles get applied both on the front of your site
- * and in the editor.
+ * The following styles get applied inside the editor only.
  *
  * Replace them with your own styles or remove the file completely.
  */
 
-.wp-block-create-block-reveal-post-data {
-	background-color: #21759b;
-	color: #fff;
-	padding: 2px;
+.reveal-post-data-modal {
+	min-width: 90vw;
+	min-height: 90vh;
 }
